--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         data: {
           url: "data/data.json"
         },
-        mark: 'tick',
+        mark: 'point',
         encoding: {
-          y: {field: 'num-of-cylinders', type: 'ordinal'},
+          y: {field: 'city-mpg', type: 'quantitative'},
           x: {field: 'price', type: 'quantitative'},
         },
       };
